Fixed: problem updating datetimes, party -> bar -> drinks -> categories (collapse), drinks -> update after add, problem with icons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@
 	src: url(/fonts/Montserrat-Light.otf);
 }
 
-*:not(.fa):not(i) {
+*:not(.fa):not(i):not(.glyphicon) {
 	font-family: Montserrat-Regular;
 }
 
